# deepsphere-pytorch

./: .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  pyproject.toml  requirements-tests.txt  requirements.txt  setup.py
deepsphere/layers/: chebyshev.py
deepsphere/layers/samplings/: healpix_pool_unpool.py
deepsphere/models/spherical_unet/: decoder.py  encoder.py  unet_model.py
deepsphere/utils/: laplacian_funcs.py
