[tool.black]
line-length = 150
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 150
known_third_party = ['sklearn', 'ignite', 'pygsp']

[build-system]
requires = [
    "setuptools>=65",
    "wheel>=0.40",
]
build-backend = "setuptools.build_meta"

[project]
name = "deepsphere"
version = "0.2.1-modern"
description = "Modernized DeepSphere for PyTorch 2.x"
authors = [{ name = "Carmen Embil Villagra" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "torchvision>=0.15",
  "numpy>=1.22",
  "scipy>=1.9",
  "PyGSP>=0.5.1",
]
